# rust_vulkan

./: README.md
screenshot/: .gitignore  Cargo.toml
screenshot/screenshot/: Cargo.toml
screenshot/screenshot/shaders/: shader.frag  shader.vert
screenshot/screenshot/src/: main.rs  screenshot_data.rs
screenshot/screenshot/src/vulkan/: create_descriptor_set_layout.rs  create_framebuffers.rs  create_pipeline.rs  create_pipeline_layout.rs  create_render_pass.rs  create_screenshot_mem_image.rs  create_screenshot_render_pass.rs  get_screenshot_format.rs  mod.rs  vulkan_data.rs
screenshot/screenshot/src/vulkan/vulkan_draw/: begin_render_pass.rs  do_screenshot.rs  do_standalone_screenshot.rs  do_swapchain_screenshot.rs  draw.rs  draw_screenshot.rs  mod.rs  save_screenshot.rs  screenshot_begin_render_pass.rs  screenshot_draw.rs  submit_screenshot.rs  update_descriptor_set.rs
screenshot/vulkan_base/: Cargo.toml
screenshot/vulkan_base/src/: check_can_read_from_surface.rs  create_swapchain.rs  get_surface_format.rs  lib.rs
screenshot/vulkan_utils/: Cargo.toml
screenshot/vulkan_utils/src/: create_image.rs  format_utils.rs  lib.rs
