[package]
authors = ["nc <mynameisnikitablack@gmail.com>"]
edition = "2018"
name = "vulkan_base"
version = "0.1.0"

[dependencies]
ash = { version = "0.35.1", default-features = false, features = ["linked"] }
ash-window = "0.9.0"
gpu-allocator = "0.16.0"
log = "0.4"
vulkan_utils = { path = "../vulkan_utils" }
winit = "0.25.0"
